наполовину сделана отправка заявки на составление анкеты опроса

--- a/css/main.css
+++ b/css/main.css
@@ -199,3 +199,7 @@ ul.inline li{
     -o-transition: opacity .3s ease-out;
     transition: opacity .3s ease-out;
 }
+
+#reqQuest-wrapper{
+    float: right;
+}
